Make buildable on Java 11